<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#3f48cc">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/dumb1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="35dp"
        android:text="@string/title2"
        android:textColor="#c4ff0e"
        android:fontFamily="@font/lato_regular"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_light"
        android:text="@string/titled2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slidetwoback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="25sp"
            android:textColor="#c4ff0e"
            android:fontFamily="@font/lato_light"
            android:layout_gravity="bottom|start"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/slidetwonext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:textSize="25dp"
            android:textColor="#c4ff0e"
            android:fontFamily="@font/lato_light"
            android:text="@string/next"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
</LinearLayout>