<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#0ed145">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/blindd" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="35dp"
        android:text="@string/title3"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/lato_regular"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:fontFamily="@font/lato_light"
        android:text="@string/titled3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slidethreeback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/lato_light"
            android:layout_gravity="bottom|start"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/slidethreedone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:layout_weight="1"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/lato_light"
            android:text="@string/done"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
</LinearLayout>